# django-arch-check

./: .arch-check.toml  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  VSCODE_EXTENSION_ROADMAP.md  pyproject.toml
django_arch_check/: __init__.py  analyzer.py  arch-report.html  baseline.py  cli.py  config.py  report.py  serializers.py  watcher.py
django_arch_check/detectors/: __init__.py  base.py  celery_tasks.py  circular_imports.py  direct_sql.py  fat_models.py  god_apps.py  migration_safety.py  missing_service_layer.py  n1_serializer_risk.py  n_plus_one.py  secret_leakage.py
extensions/vscode-django-arch-check/: .vscodeignore  CHANGELOG.md  PUBLISHING.md  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode-django-arch-check/src/: config.ts  extension.ts
extensions/vscode-django-arch-check/src/services/: cli.ts  workspace.ts
extensions/vscode-django-arch-check/src/webview/: dashboardPanel.ts  views.ts
tests/: conftest.py  test_analyzer.py  test_baseline.py  test_celery_tasks.py  test_circular_imports.py  test_cli.py  test_config.py  test_direct_sql.py  test_fat_models.py  test_god_apps.py  test_migration_safety.py  test_missing_service_layer.py  test_n1_serializer_risk.py  test_n_plus_one.py  test_report.py  test_secret_leakage.py  test_watcher.py
